k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: node-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: node-app-service
      port:
        number: 80

  rules:
    - host: nearyouindia.com
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: node-app-service
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: node-app-service
                port:
                  number: 80
